Fixed section height that was overlapping with header

--- a/app/assets/stylesheets/checker.css.scss
+++ b/app/assets/stylesheets/checker.css.scss
@@ -117,7 +117,7 @@ header {
   width: 100%;
   min-height: 100%;
   margin: 0;
-  padding: 60px 20% 10px 20%;
+  padding: 65px 20% 10px 20%;
   font-weight: 300;
 
   .section-wrapper {
